bug on mobile where there would be no comic sans :sad:

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 html, body {
 	height: 100%;
 	margin: 0;
-	font-family: 'Comic Sans MS', 'Comic Neue', 'Segoe UI', cursive, sans-serif;
+	font-family: 'Comic Sans MS', 'Comic Sans MS', 'Comic Sans MS', cursive, sans-serif;
 }
 
 /* Make the checkerboard background move and stuff */
@@ -71,3 +71,4 @@ a { color: #0366d6; }
 	outline: 3px solid rgba(3,102,214,0.15);
 	outline-offset: 3px;
 }
+
